tests/specs/ecosystem/marvinh_test/fresh/2_0_0_prealpha_12.test
marvinh-test/fresh/2.0.0-prealpha.12
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@std/assert@^0.221.0": "jsr:@std/assert@0.221.0",
      "jsr:@std/fs@^0.221.0": "jsr:@std/fs@0.221.0",
      "jsr:@std/path@^0.221.0": "jsr:@std/path@0.221.0",
      "npm:preact@10.20.1": "npm:preact@10.20.1"
    },
    "jsr": {
      "@std/assert@0.221.0": {
        "integrity": "a5f1aa6e7909dbea271754fd4ab3f4e687aeff4873b4cef9a320af813adb489a"
      },
      "@std/fs@0.221.0": {
        "integrity": "028044450299de8ed5a716ade4e6d524399f035513b85913794f4e81f07da286",
        "dependencies": [
          "jsr:@std/path@^0.221.0"
        ]
      },
      "@std/path@0.221.0": {
        "integrity": "0a36f6b17314ef653a3a1649740cc8db51b25a133ecfe838f20b79a56ebe0095",
        "dependencies": [
          "jsr:@std/assert@^0.221.0"
        ]
      }
    },
    "npm": {
      "preact@10.20.1": {
        "integrity": "sha512-JIFjgFg9B2qnOoGiYMVBtrcFxHqn+dNXbq76bVmcaHYJFYR4lW67AOcXgAYQQTDYXDOg/kTZrKPNCdRgJ2UJmw==",
        "dependencies": {}
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2724 [ERROR]: 'Deno' has no exported member named 'ServeTlsOptions'. Did you mean 'ServeOptions'?
export interface ListenOptions extends Partial<Deno.ServeTlsOptions> {
                                                    ~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/app.ts:27:53

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'FreshApp<T>'.
  listen(options?: ListenOptions): Promise<void> {
  ~~~~~~
    at file://<tmpdir>/src/dev/dev_app.ts:23:3

Found 2 errors.

